--- a/example_table/main.css
+++ b/example_table/main.css
@@ -5,7 +5,7 @@ table {
 th {
   border: 1px solid red;
   padding: 10px;
-  background-color: lightgray;
+  /* background-color: lightgray; */
 }
 
 td {
