--- a/css/example_pseudo/main.css
+++ b/css/example_pseudo/main.css
@@ -44,3 +44,40 @@ input:focus {
   width: 200px;
 }
 
+.fruits li:first-child {
+  color: red;
+}
+
+.fruits li:last-child {
+  color: blue;
+}
+
+.fruits li:nth-child(2) {
+  color: yellow;
+}
+
+.fruits li:nth-child(2n) {
+  font-size: 30px;
+}
+
+/* .box-group div:nth-child(1) { */
+.box-group div:first-child {
+  color: red;
+  font-weight: bold;
+}
+
+/* .fruits2 p:nth-child(1) {
+  color: red;
+} */
+.fruits2 p:nth-of-type(1) {
+  color: red;
+}
+
+
+.fruits3 li:nth-of-type(1) {
+  color: red;
+}
+
+.fruits4 li:not(.strawberry) {
+  color: red;
+}
