--- a/css/attribute_box/main.css
+++ b/css/attribute_box/main.css
@@ -12,3 +12,16 @@
   height: 200px;
   background-color: orange;
 }
+
+.margin-box-parent {
+  width: 400px;
+  height: 200px;
+  border: 4px solid red;
+}
+
+.margin-box-child {
+  width: 100px;
+  height: 100px;
+  border: 4px solid;
+  margin: 50%;
+}
