add transform example

--- a/css/transition_transform/main.css
+++ b/css/transition_transform/main.css
@@ -2,14 +2,18 @@
   width: 100px;
   height: 100px;
   background-color: tomato;
-  margin: 50px;
   transition: 2s ease-in;
   /* transition-property: width, background;
   transition-duration: 1s; */
   /* transition-timing-function: linear; */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 30px;
 }
 
 .box:hover {
   width: 300px;
   background-color: dodgerblue;
+  transform: translate(20px, 20px) scale(2) skew(45deg) rotate(40deg);
 }
