--- a/css/flex/main.css
+++ b/css/flex/main.css
@@ -1,6 +1,8 @@
 .container {
   border: 2px solid red;
   display: flex;
+  flex-wrap: nowrap;
+  overflow-x: scroll;
 }
 
 .container .item {
@@ -8,4 +10,31 @@
   height: 100px;
   border: 2px solid;
   border-radius: 10px;
+}
+
+.container2 {
+  border: 4px solid;
+  display: flex;
+  justify-content: space-around;
+}
+
+.container2 .item2 {
+  width: 150px;
+  height: 100px;
+  background-color: tomato;
+  border: 4px dashed red;
+}
+.container3 {
+  height: 400px;
+  border: 4px solid;
+  display: flex;
+  flex-wrap: wrap;
+  align-content: space-between;
+}
+
+.container3 .item3 {
+  width: 150px;
+  height: 100px;
+  background-color: tomato;
+  border: 4px dashed red;
 }
