--- a/css/flex/main.css
+++ b/css/flex/main.css
@@ -38,3 +38,26 @@
   background-color: tomato;
   border: 4px dashed red;
 }
+.container4 {
+  height: 400px;
+  border: 4px solid;
+  display: flex;
+  flex-wrap: wrap;
+  align-items: baseline;
+}
+
+.container4 .item4 {
+  width: 120px;
+  height: 100px;
+  background-color: tomato;
+  border: 4px dashed red;
+  border-radius: 10px;
+  font-size: 30px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+/* .container4 .item4:nth-child(3) {
+  font-size: 50px;
+} */
