--- a/css/flex-items/main.css
+++ b/css/flex-items/main.css
@@ -1,6 +1,7 @@
 .container {
   border: 4px solid;
   display: flex;
+  margin-bottom: 20px;
 }
 
 .container .item {
@@ -20,5 +21,23 @@
 }
 
 .item12 {
+  flex-grow: 2;
+}
+
+.basis-container {
+  border: 4px solid;
+  display: flex;
+}
+
+.basis-container .basis-item {
+  height: 100px;
+  background-color: tomato;
+  border: 4px dashed red;
+  border-radius: 10px;
+  flex-grow: 1;
+  flex-basis: 100px;
+}
+
+.basis-container .item23 {
   flex-grow: 2;
 }
