--- a/css/flex-items/main.css
+++ b/css/flex-items/main.css
@@ -1,7 +1,11 @@
 .container {
+  width: 500px;
+  height: 400px;
   border: 4px solid;
   display: flex;
   margin-bottom: 20px;
+  flex-wrap: wrap;
+  align-items: flex-end;
 }
 
 .container .item {
@@ -13,8 +17,19 @@
   font-size: 30px;
   display: flex;
   justify-content: center;
-  align-items: center;
 }
+
+.container .item2 {
+  align-self: center;
+}
+.container .item4 {
+  align-self: flex-start;
+}
+.container .item7 {
+  align-self: stretch;
+  height: auto;
+}
+
 
 .item11 {
   flex-grow: 1;
