--- a/css/grid/main.css
+++ b/css/grid/main.css
@@ -3,7 +3,9 @@
   grid-template-rows: repeat(4, 100px);
   grid-template-columns: repeat(3, 1fr);
   border: 4px solid lightgray;
-  width: 600px;
+  width: 100%;
+  grid-auto-columns: 100px;
+  grid-auto-rows: 1fr;
 }
 
 .item {
@@ -23,6 +25,11 @@
 .item:nth-child(4) {
   grid-row: 4 / 5;
   grid-column: -2 / -4;
+}
+
+.item:nth-child(6) {
+  grid-column: 4 / 5;
+  grid-row: 4 / 5;
 }
 
 .container2 {
@@ -54,4 +61,3 @@
 .item2:nth-child(4) {
   grid-area: footer;
 }
-
